# learning

./: .gitignore  README.md  main.py  pyproject.toml  run.py
backend/: README.md  main.py  pyproject.toml
backend/orm/: classes.py  operations.py
frontend/opp-app/: README.md  package-lock.json  package.json
frontend/opp-app/src/: App.jsx  styles.css
mqtt/: mqttconnect.py
orm/: classes.py  operations.py
server/: docker-compose.yml
server/mqtt5/: docker-compose.yml
server/mqtt5/data/: mosquitto.db
tickets/: 0002-upsert-data  0007-add-delete-opeation  0008-introduce-tests  COMPLETE_0001-investigate-classes-in-python  COMPLETE_0003-add-fast-api  COMPLETE_0004-introduce-inheritance-in-entities  COMPLETE_0005-adjust-directory-structure  COMPLETE_0006-initial-react-app
